--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,29 @@ h4 {
   padding: 1%;
 }
 
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+td:nth-child(2) {
+  width: 50%;
+}
+
+.DeleteButton {
+  color: white;
+  border-radius: 5px;
+  background: #498efd;
+}
+
 .espacioBlanco {
   margin: 30%;
 }
